--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -16,6 +16,7 @@
           .Random_info__name
             投稿者:
             = random.user.name
+            -# = User.find(random.user_id).name
           .Random_info__tag
             タグ:
             = random.tag_list
