--- a/app/assets/stylesheets/edit.scss
+++ b/app/assets/stylesheets/edit.scss
@@ -16,15 +16,18 @@
 }
 
 .font-control{
+  padding: 5px;
   width: 300px;
 }
 
-.edit-title{
+.edit-title {
+  padding: 5px;
   height: 30px;
   width: 500px;
 }
 
-.edit-textbox{
+.edit-textbox {
+  padding: 5px;
   height: 200px;
   width: 600px;
 }
