--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -8,6 +8,18 @@
   margin-bottom: 20px;
 }
 
+.Book_info__content{
+  padding: 5px;
+}
+
+.Content_contents {
+  padding: 5px;
+}
+
+.textbox {
+  padding: 5px;
+}
+
 
 // post_list header
 .post_list_font {
