--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -5,20 +5,20 @@
     = form_with model: @post, local: true do |f|
       .Edit_field
         タイトル
-        %br/
-        = f.text_field :title, class:'edit-title'
+        .Edit_field_title
+          = f.text_field :title, class:'edit-title'
       .Edit_field
         内容
-        %br/
-        = f.text_area :content, class:'edit-textbox'
+        .Edit_field_contents
+          = f.text_area :content, class:'edit-textbox'
       .Edit_field
         画像
-        %br/
-        = f.file_field :image, class:'edit-image'
+        .Edit_field_image
+          = f.file_field :image, class:'edit-image'
       .Edit_field
         .form-contents__tag
           = f.label :tag_list
-          %br/
+        .form-contents__list
           = f.text_field :tag_list, value: @post.tag_list.join(","), class: "font-control",placeholder: 'テキストを入力してください'
       .Edit_field
         = f.submit 'Send', class:'edit-submit'
