--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -6,20 +6,20 @@
     = form_with model:@post, local: true do |f|
       .New_field
         タイトル
-        %br/
-        = f.text_field :title, class:'new-title'
+        .New_field_title
+          = f.text_field :title, class:'new-title'
       .New_field
         内容
-        %br/
-        = f.text_area :content, class:'new-textbox'
+        .New_field_contents
+          = f.text_area :content, class:'new-textbox'
       .New_field
         画像
-        %br/
-        = f.file_field :image, class:'new-image'
+        .New_field_image
+          = f.file_field :image, class:'new-image'
       .New_field
         .form-contents__tag
           = f.label :tag_list
-          %br/
+        .form-contents__list
           = f.text_field :tag_list, value: @post.tag_list.join(","), class: "font-control",placeholder: 'テキストを入力してください'
       .New_field
         = f.submit 'Send', class:'new-submit'
