--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,7 +1,9 @@
 
 .Edit
   .Edit_form
-    編集画面
+    .Edit_post
+      .Edit_post_message
+        編集画面
     = form_with model: @post, local: true do |f|
       .Edit_field
         タイトル
