--- a/app/views/posts/another_user_post_list.html.haml
+++ b/app/views/posts/another_user_post_list.html.haml
@@ -28,7 +28,8 @@
                     画像はありません
               .Post_list_book_info
                 .Post_list_book_info__content
-                  = simple_format(post.content)
+                  = safe_join(post.content.split("\n"),tag(:br))
+                  -# = simple_format(post.content)
               .Post_list_user_name
                 投稿者：
                 = link_to user_path(post.user_id), class:"Post_list_contributor" do
